# cuda-linear-regression

./: CMakeLists.txt  README.md
data/: X_test.csv  X_train.csv  cleaned_babies.csv  random_300x1.csv  random_300x300.csv  uneven_matrix.csv  y_test.csv  y_train.csv
src/: CMakeLists.txt  benchmark.c  main.c  main.cpp  regression.c
src/core/: CMakeLists.txt  cpu_matrix.c  cpu_matrix.h  cpu_matrix.hpp  gpu_matrix.cu  gpu_matrix.h  gpu_matrix.hpp
src/models/: CMakeLists.txt  linear_regression.c  linear_regression.h  linear_regression.hpp
src/utils/: CMakeLists.txt  matrix.cu  matrix.h  matrix.hpp  timing.c  timing.h  timing.hpp
test/: CMakeLists.txt  test_cpu_matrix.c  test_gpu_matrix.c  test_gpu_matrix.cpp  test_linear_regression.c  test_matrix.c  test_matrix.cpp  test_timing.c
test/data/: 101x101.csv  3x3_matrix.csv
